Casting dai software of index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
   Naeem Shah Jewellers
   </title>
   <body>
-    <h1> Best Shop in Bannu.</h1>
+    <h1> Best Shop in Bannu city.</h1>
   </body>
 </html>
