Counter disply.html

--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
   </title>
   <body>
     <h1> Best Shop in Bannu City.</h1>
+    <p align="center">
+<!--webbot bot="HitCounter" b-reset="TRUE" u-custom i-image="1" i-resetvalue="0" PREVIEW="&lt;strong&gt;[Hit Counter]&lt;/strong&gt;" i-digits="0" --></p>
   </body>
 </html>
